# fin-sentiment-classifier

./: .gitignore  README.md  pyproject.toml
notebooks/: model_fine_tuning.ipynb  playground.ipynb
src/: config.py  data_collator.py  data_loader.py  data_preprocessor.py  inference.py  metrics_computation.py  model_loader.py  model_trainer.py  training_arguments.py
