[project]
name = "fin-sentiment-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "protobuf>=7.34.0",
    "sentencepiece>=0.2.1",
    "transformers>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
